--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -19,7 +19,7 @@ set(VITA_VERSION  "01.00")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(VITA_MKSFOEX_FLAGS "${VITA_MKSFOEX_FLAGS} -s CATEGORY=gdb")
+set(VITA_MKSFOEX_FLAGS "${VITA_MKSFOEX_FLAGS}")
 set(VITA_MAKE_FSELF_FLAGS "${VITA_MAKE_FSELF_FLAGS} -a 0x280000000000002E")
 
 include_directories(
@@ -37,6 +37,9 @@ add_executable(${PROJECT_NAME}
 	main.c
 	menu.c
 	pkg.c
+	promote.c
+	rif.c
+	ime.c
 	bgm.cpp
 )
 
@@ -67,7 +70,9 @@ target_link_libraries(${PROJECT_NAME}
 	SceIofilemgr_stub
 	ScePower_stub
 	SceShellSvc_stub
-	SceAudio_stub	
+	SceAudio_stub
+	ScePromoterUtil_stub
+	SceSysModule_stub
 )
 
 vita_create_self(eboot.bin ${PROJECT_NAME} UNSAFE)
